--- a/app/views/admin/discusses.html.erb
+++ b/app/views/admin/discusses.html.erb
@@ -54,6 +54,6 @@
 		var fail_button="    <button class='btn btn-danger' onclick='verifyDiscuss("+id+",false);'>不合格</button>";
 		var titleAndButs=title+pass_button+fail_button;
 		var contentAndArea='<textcontent>'+content+'</textcontent>';
-		showGlobalModal(1,titleAndButs,contentAndArea);
+		showGlobalModal(1,titleAndButs,contentAndArea,function(){});
 	}
 </script>
