--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,8 +37,11 @@
 					<a class="page-scroll" href="/books/" rel="nofollow">二手書</a>
 				</li>
 				<li class="dropdown">
-					<a class="page-scroll" href="/courses/">全校課程</a>
+					<a class="">全校課程</a>
 					<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">
+						<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
+							<a href="/courses/" style="color:white;">全校課程</a>
+						</li>
 						<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
 							<a href="/discusses/" style="color:white;">心得</a>
 						</li>
