--- a/app/views/discusses/show.html.erb
+++ b/app/views/discusses/show.html.erb
@@ -1,116 +1,14 @@
-<div class="col-md-12">
-	<div class="bs-callout bs-callout-default well">
-		<h3><%=fa_icon "comment-o"%>課程討論</h3>
-		<!--<h4>請在此頁討論與課程內容有關的問題或發表心得，對選課或老師的評論可至上方課程資訊的作業/考試及其他內容編輯~</h4>
-		<h4 class="text-right">
-			<%=link_to "javascript:void(0);", onclick:"$('#main_title').focus();" do %>
-				<%=fa_icon "pencil-square-o" %>新增主題
-			<% end %>
-		</h4>
-		-->
-	</div>
-
-
-
-<% @discusses.each do |discuss| %>
-	<div class="panel panel-default bs-callout-success" id="discuss_<%=discuss.id%>" style="border-left-width:5px;">
-		<div class="panel-heading row no-margin-left no-margin-right" >
-			<div class="col-md-1">
-			<% if discuss.is_anonymous %>
-				<%= image_tag asset_path("anonymous.jpg"), size: "50x50", style:"margin-top:10px;", alt:"Anonymous", title:"匿名" %>
-			<% else %>
-				<a href="https://www.facebook.com/<%=discuss.user_uid%>" target="_blank" class="masterTooltip" title="<%=discuss.user_name%>">
-					<%= image_tag "http://graph.facebook.com/"<<discuss.user_uid<<"/picture", size: "50x50", class:"", style:"margin-top:10px;"  %>
-				</a>
-			<% end %>
-			
-			</div>
-			<div class="col-md-6" id="main_title_<%=discuss.id%>">
-			<h4 id="title_<%=discuss.id%>" ><%=discuss.title%></h4>
-			<p><%=discuss.updated_at.strftime("%Y/%m/%d %H:%M")%></p>
-			</div>
-			<div class="col-md-5">
-				<div class="row pull-right">
-					<br>
-					<% can_like=current_user && discuss.discuss_likes.select{|l|l.user_id==current_user.id}.empty? %>					
-					<div style="display:inline-block;margin-right:5px;">
-						<div class="share-button_<%=discuss.id%>" id="<%=discuss.id%>"></div>				
-					</div>
-					<% if can_like %>
-						<%= fa_icon "thumbs-o-up 2x", title:"讚", class:"clickable-hover", onclick:"like(1,'main',#{discuss.id},$(this));"%>
-					<% else %>
-						<%= fa_icon "thumbs-o-up 2x", title:"讚" %>
-					<% end %>
-					<span class="like-count like" id="main_like_<%=discuss.id%>"><%=discuss.likes%></span>
-				</div>
-			</div>
-		</div>
-		<div class="panel-body row">
-			<div class="col-md-12" id="main_content_<%=discuss.id%>">
-			<textcontent id="content_<%=discuss.id%>"><%=discuss.content%></textcontent>
-			<p class="text-right" >
-				<%=link_to "回覆","javascript:void(0);" , onclick: "show_sub_form(#{discuss.id})", id:"reply_but_#{discuss.id}" %>
-				<% if current_user && discuss.user==current_user %>
-					<%=link_to "修改","javascript:void(0);", onclick:"edit(#{discuss.id},'main')", id:"edit_but_#{discuss.id}" %>
-				<% end %>
-			</p>
-			</div>
-		</div>
-		<div class="panel-footer row no-margin-left no-margin-right" style="background-color:white;">
-			<% discuss.sub_discusses.each do |sub_d| %>
-				<div class="sub-discussion col-md-offset-1 col-md-11" >
-					<div class="col-md-1">						
-						<a href="https://www.facebook.com/<%=sub_d.user_uid%>" target="_blank" class="masterTooltip" title="<%=sub_d.user_name%>">
-							<%= image_tag "http://graph.facebook.com/"<<sub_d.user_uid<<"/picture", size: "45x45", class:"", style:"margin-top:10px;"  %>
-						</a>											
-						<br>
-					</div>
-						<div class="col-md-8 " id="sub_content_<%=sub_d.id%>">
-							<p><%=sub_d.updated_at.strftime("%Y/%m/%d %H:%M")%></p>
-							<textcontent id="sub_content_<%=sub_d.id%>"><%=sub_d.content%></textcontent>
-							<p class="text-right pull-right" style="display:inline-block">
-							<% if current_user && sub_d.user==current_user %>
-								<%=link_to "修改","javascript:void(0);", onclick:"edit(#{sub_d.id},'sub')", id:"edit_sub_but_#{sub_d.id}" %>
-							<% end %>
-							</p>
-						</div>
-						<div class="col-md-3">
-							<p class="text-righ">
-							<br>
-							
-							<% can_like_sub=current_user && sub_d.discuss_likes.select{|l|l.user_id==current_user.id}.empty? %>
-							<% if can_like_sub %>
-								<%= fa_icon "thumbs-o-up 2x", title:"讚", class:"clickable-hover", onclick:"like(1,'sub',#{sub_d.id},$(this));"%>
-							<% else %>
-								<%= fa_icon "thumbs-o-up 2x", title:"讚" %>
-							<% end %>
-							<span class="like-count like" id="sub_like_<%=sub_d.id%>"><%=sub_d.likes%></span>		
-							</p>
-						</div>
-				</div>
-			<% end %>
-			<div id="sub_form_<%=discuss.id%>" class="sub-form row no-margin-left"></div>
-		</div>
-		
-	</div>
-
-<%end%>
-
-<%= render "main_form" %>
-
-</div>
-
-<%= render "function_js" %>
-
+<%= javascript_include_tag "discuss", "data-turbolinks-track" => true %>
+<div id="content-page" class="bg-white col-md-10 col-md-offset-1" style="//margin-bottom:40px;"></div>
+<%=render "modal_content" %>
 <script>
-	$(document).ready(function(){
-		<% if params[:target]%>
-			$('body').scrollTo('#discuss_<%=params[:target]%>',1000,{offset:-60});
-		<% end %>
-		<% share_url="#{root_url}courses/#{@ct.course_id}?first_show=discussion&tid=#{@ct.teacher_id}&target=" %>
+	$(function(){
+		var data=<%=@result.to_json.html_safe%>;
+		$("#content-page").html(tmpl("discuss-modal-title",data )+tmpl("discuss-modal-content",data));
+		<% share_url=request.original_url %>
 		$("[class^=share-button]").each(function(){
-			var share_url='<%=j share_url.html_safe%>'+$(this).attr('id');
-			var description=$("#content_"+$(this).attr('id')).text();
+			var share_url='<%=j share_url.html_safe%>';
+			
 			new Share('.'+$(this).attr('class'), {
 				ui: {
 					button_text :"分享",
@@ -119,17 +17,17 @@
 				networks: {
 					facebook: {
 						app_id: "<%=Facebook::APP_ID%>",
-						title : $("#title_"+$(this).attr('id')).text(),
-						description: description,
+						title : data.title,
+						description: data.content,
 						url : share_url,
-						caption: "<%=@ct.course.ch_name<<' - '<<@ct.teacher_name%>"
+						caption: ""
 					},
 					google_plus:{
 						url :share_url
 					},
 					twitter:{
 						url :share_url,
-						description :description.substr(0,50)
+						description :data.content.substr(0,50)
 					},
 					pinterest:{
 						enabled:false
@@ -140,7 +38,5 @@
 				}
 			});
 		});
-
 	});
-
 </script>
