--- a/app/views/discusses/_modal_content.html.erb
+++ b/app/views/discusses/_modal_content.html.erb
@@ -23,7 +23,7 @@
 				{% if(o.editable){ %}
 					<a href="/discusses/{%=o.id%}/edit" class="btn btn-info" style="padding:5px 12px;margin-top: -2px;"><%=fa_icon "pencil"%>修改</a>
 				{% } %}
-				<button class="btn btn-success" style="padding:5px 12px;margin-top: -2px;" onclick="$('#subform-container').removeClass('hidden');$('#sub_discuss_content').focus();"><%=fa_icon "reply"%>回覆</button>
+				<button class="btn btn-success" style="padding:5px 12px;margin-top: -2px;" onclick="reply();"><%=fa_icon "reply"%>回覆</button>
 				<div style="display:inline-block;margin-right:5px;">
 					<div class="share-button_{%=o.id%}"></div>
 				</div>
@@ -75,6 +75,14 @@
 	</div>
 </script>
 <script>
+	function reply(){
+	<% if current_user %>
+		$('#subform-container').removeClass('hidden');
+		$('#sub_discuss_content').focus();
+	<% else %>
+		toastr["info"]("請先登入!");
+	<% end %>
+	}
 	function edit($obj,id){
 		var text=$obj.parent().prev().find("textcontent").text();
 		var $container=$obj.parent().parent();
