--- a/app/views/discusses/_sub_form.html.erb
+++ b/app/views/discusses/_sub_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for SubDiscuss.new, url:{action: "create"}, :class=>"sub-discussion ", :remote=>"true" do |f| %>
 	<div class="col-md-1" style="padding-left:30px;">
-		<% if current_user.hasFb? %>
+		<% if current_user.try(:hasFb?) %>
 			<%= image_tag "http://graph.facebook.com/#{session[:auth_facebook][:uid]}/picture", size: "45x45", class:"", style:"margin-top:10px;"  %>
 		<% else %>
 			<%= image_tag asset_path("anonymous.jpg"), size: "45x45", class:"", style:"margin-top:10px;"%>
