--- a/app/views/course_maps/edit.html.erb
+++ b/app/views/course_maps/edit.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "course_maps/manage", "data-turbolinks-track" => true %>
+<%= javascript_include_tag "course_maps/manage", "data-no-turbolink" => true %>
 
 <h3>課程地圖 - <%=@course_map.name%></h3>  
 
