--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,35 +1,20 @@
-
+<!--
 <div class="" style="width:880px;height:440px;display:inline-block;overflow:hidden;">
 
-<% if @event.event_image %>
-<%= image_tag @event.event_image.img.url,style:"width:100%;height:100%;"  %>
+<% #if @event.event_image %>
+<%# image_tag @event.event_image.img.url,style:"width:100%;height:100%;"  %>
 
-<% end %>
+<% #end %>
 
 </div>
-<div class="row">
-	<div class="col-md-2">
-	標題
-	</div>
-	<div class="col-md-2">
+-->
+	
+
+<div class="row col-md-offset-2">
+	<h4>
 		<%=@event.title%>
-	</div>
-</div>
-<% if !@event.url.blank? %>
-<div class="row">
-	<div class="col-md-2">
-	活動網址
-	</div>
-	<div class="col-md-2">
-		<%=link_to @event.url,@event.url, target:"blank"%>
-	</div>
-</div>
-<% end %>
-<div class="row">
-	<div class="col-md-2">
-	內容
-	</div>
-	<div class="col-md-10">
+	</h4>
+	<section id="content">
 		<%=@event.content.html_safe%>
-	</div>
+	</section>
 </div>
