change course simulation cart button to star

--- a/app/views/courses/search/_xtmpl_results_mini.html.erb
+++ b/app/views/courses/search/_xtmpl_results_mini.html.erb
@@ -59,7 +59,7 @@
 						<span class="pull-right">
 						{% if(o.add_to_cart){ %}
 								<button title="新增至課程收藏" data-toggle="tooltip" class="btn btn-info btn-circle" onclick="add_to_cart({%=cd.id%},'add')">
-									<span class="glyphicon glyphicon-plus"></span>
+									<span class="glyphicon glyphicon-star"></span>
 								</button>
 						{% } %}
 						{% if(o.view_type=="simulation"){ %}											
