radial progress color

--- a/app/views/course_content/single_compare.html.erb
+++ b/app/views/course_content/single_compare.html.erb
@@ -15,11 +15,18 @@
     fill: #0000FF;
 }
 
-.arc {
-    stroke-weight:0.1;
-    fill: #4e8fff;
+#cold .arc {
+  stroke-weight:0.1;
+  fill: #4e8fff;
 }
-
+#sweety .arc {
+  stroke-weight:0.1;
+  fill: #78FF00;
+}
+#hardness .arc {
+  stroke-weight:0.1;
+  fill: #FF9500;
+}
 
 .arc2 {
     stroke-weight:0.1;
