fix admin course map bug & admin user list layout improvement

--- a/app/views/admin/users.html.erb
+++ b/app/views/admin/users.html.erb
@@ -18,12 +18,12 @@
 	<thead>
 		<tr class="row">
 			<th class="col-md-2">Name</th>
-			<th class="col-md-2">帳號類型</th>
-			<th class="col-md-3">系所</th>		
+			<th class="col-md-1">帳號類型</th>
+			<th class="text-center col-md-3">系所</th>	
+			<th class="col-md-1">年級</th>			
 			<th class="col-md-1">學分數</th>
-			<th class="col-md-2">課程地圖</th>
-			<th>年級</th>
-			<th>身份</th>
+			<th class="text-center col-md-2">課程地圖</th>		
+			<th class="text-center col-md-2">身份</th>
 		</tr>
 	</thead>
 	<tbody id="body">
